--- a/europe.html
+++ b/europe.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <title>Ticet to ride optimiser</title>
     <link rel="stylesheet" href="//capp.nicepage.com/a0c7d1445826f49b230c17c9a900a2eadc927fad/nicepage.css" media="screen">
-<link rel="stylesheet" href="/nicepage-site.css" media="screen">
+<link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Page-6.css" media="screen">
     <script class="u-script" type="text/javascript" src="//capp.nicepage.com/assets/jquery-3.5.1.min.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="//capp.nicepage.com/a0c7d1445826f49b230c17c9a900a2eadc927fad/nicepage.js" defer=""></script>
